--- a/C9/www/index.html
+++ b/C9/www/index.html
@@ -24,7 +24,7 @@
                     <!--<div class="setting-ico"><a href="notifiche.html"></a></div>-->
                     <div class="clear"></div>
                     <div class="profile_logo">
-                        <a href="index.html"><img src="images/logo.png" style="margin-top:10px" width="130" alt="" />	</a>
+                        <a href="index_old.html"><img src="images/logo.png" style="margin-top:10px" width="130" alt="" />	</a>
                     </div>
                 </div>
             </div>
